# rustodo

./: Cargo.toml
app/: Cargo.toml
app/src/: inmem.rs  lib.rs  repository.rs
app/src/inmem/: repository.rs  updator.rs
app/src/inmem/tests/: util.rs
app/src/repository/: db_adapter.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  opts.rs  view.rs
core/: Cargo.toml
db/: Cargo.toml
db/migrations/2020-10-21-213946_create_tasks/: up.sql
db/src/: connection.rs  lib.rs  model.rs  repository.rs  schema.rs  updator.rs
domain/: Cargo.toml
domain/src/: lib.rs
todo/: Cargo.toml
todo/src/: lib.rs
