[package]
name = "cli"
version = "0.1.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
todo = { path = "../todo" }
app = { path = "../app" }

